Upgrade about & usage output