@@ -26,10 +26,21 @@ sbt -v[erbosely] creating a new project built with the latest scala 2.10.x.
 
 ```
 % sbt -v -210 -sbt-create about
+[addSbt] arg = '++ 2.10.6'
+[residual] arg = 'about'
+No extra sbt options have been defined
 Detected sbt version 0.13.10
-Detected Java version: 1.8.0_51
+Using default jvm options
+Detected Java version: 1.8.0_72
 # Executing command line:
-/Library/Java/JavaVirtualMachines/jdk1.8.0_51.jdk/Contents/Home/bin/java
+java
+-Xms512m
+-Xmx1536m
+-Xss2m
+-XX:ReservedCodeCacheSize=256m
+-XX:+TieredCompilation
+-XX:+CMSClassUnloadingEnabled
+-XX:+UseConcMarkSweepGC
 -jar
 $HOME/.sbt/launchers/0.13.10/sbt-launch.jar
 "++ 2.10.6"
@@ -38,7 +49,7 @@ about
 [info] Setting version to 2.10.6
 [info] This is sbt 0.13.10
 [info] The current project is built against Scala 2.10.6
-[info] sbt, sbt plugins, and build definitions are using Scala 2.10.5
+[info] sbt, sbt plugins, and build definitions are using Scala 2.10.6
 ```
 
 ## sbt -h
@@ -91,7 +102,7 @@ runner with the -x option.
   -scala-version <version>  use the specified version of scala
   -binary-version <version> use the specified scala version when searching for dependencies
 
-  # java version (default: java from PATH, currently java version "1.8.0_66")
+  # java version (default: java from PATH, currently java version "1.8.0_72")
   -java-home <path>         alternate JAVA_HOME
 
   # passing options to the jvm - note it does NOT use JAVA_OPTS due to pollution
